--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.8.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "normalize.css": "^8.0.1",
