--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
@@ -62,6 +63,7 @@
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-share": "^2.4.0",
+    "react-toastify": "^4.5.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
@@ -99,13 +101,13 @@
     "html-loader": "^0.5.5",
     "husky": "^1.3.1",
     "image-webpack-loader": "^4.6.0",
-    "jest": "^24.0.0",
+    "jest": "^24.3.1",
     "jest-html-reporter": "^2.4.4",
     "jest-localstorage-mock": "^2.4.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.11.0",
-    "react-test-renderer": "^16.7.0",
     "nyc": "^13.3.0",
+    "react-test-renderer": "^16.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2"
