--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/runtime": "^7.3.1",
     "autoprefixer": "^9.4.7",
     "axios": "^0.18.0",
+    "cloudinary-react": "^1.1.0",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.8.0",
